# bmnsim

./: BMN Notebook.ipynb  Bootstrap Notebook.ipynb  Plotting Notebook.ipynb  QSim Notebook.ipynb  README.md  algebra.ipynb  algebra.py  pyproject.toml  utils.py
bmn/: algebra.py  bootstrap.py  bootstrap_complex.py  born_oppenheimer.py  brezin.py  config_utils.py  linear_algebra.py  models.py  newton_solver.py  sim_utils.py  solver.py  solver_newton.py  solver_pytorch.py  solver_trustregion.py  utils.py
data_from_papers/: Berkowits et al 1606.04951.csv
data_from_papers/han_hartnoll_data/: TwoMatrixFig3a_L_3.csv  TwoMatrixFig3a_L_4.csv
scripts/: bfss.py  bmn.py  mini_bfss.py  mini_bfss_test.py  mini_bmn.py  mini_bmn_test.py  one_matrix.py  one_matrix_complex.py  one_matrix_degree6.py  one_matrix_test.py  play.py  plotter.py  pytorch_scrap.py  symmetry_check.py  three_matrix_test.py  two_matrix.py  two_matrix_complex.py  two_matrix_small_mass.py  two_matrix_test.py
scripts/tests/: mini_bfss_test.py  mini_bmn_test.py  one_matrix_test.py  three_matrix_test.py  two_matrix_test.py
tests/: test_algebra.py  test_linear_algebra.py
